tested with jdk9 b179, Gradle 4.1-rc-1